# sle2024

./: CMakeLists.txt  mpi.cpp
3diagmtrx/: CMakeLists.txt
3diagmtrx/src/: CMakeLists.txt
3diagmtrx/src/3/: 3diagmtrx.cpp  3diagmtrx.h
3diagmtrx/tests/: CMakeLists.txt  main.cpp
src/: 2.cpp  CMakeLists.txt  algorithms.h  decomposition.h  iterative_methods.cpp  iterative_methods.h  matrixes.cpp  matrixes.h  solvers.cpp  solvers.h  vector_operations.cpp  vector_operations.h
tests/: CMakeLists.txt  csr_test.cpp  dense_test.cpp  householder_test.cpp  iterative_methods_test.cpp  matrixes.h  tridiagonal_test.cpp  vector_operations_test.cpp
